--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "9.7.3",
     "axios": "1.6.2",
     "less": "4.2.0",
     "react": "18.2.0",
