--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@react-spring/web": "9.7.3",
     "axios": "1.6.2",
     "less": "4.2.0",
-    "mockjs": "^1.1.0",
+    "mockjs": "1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.12.0",
     "react-router-dom": "6.19.0",
+    "swr": "2.2.4",
     "tailwindcss": "3.3.5",
     "zustand": "4.4.6"
   },
@@ -33,6 +34,6 @@
     "postcss": "8.4.31",
     "typescript": "5.2.2",
     "vite": "5.0.0",
-    "vite-plugin-mock": "^3.0.0"
+    "vite-plugin-mock": "3.0.0"
   }
 }
